--- a/task2.html
+++ b/task2.html
@@ -42,13 +42,13 @@
                     <i class="fa-solid fa-house"></i><a href="task2.html">Home</a>
                 </li>
                 <li>
-                    <i class="fa-solid fa-a"></i><a href="#About">About Us</a>
+                    <i class="fa-solid fa-a"></i><a href="./task1/About.html">About Us</a>
                 </li>
                 <li>
-                    <i class="fa-solid fa-laptop"></i><a href="#Services">Services</a>
+                    <i class="fa-solid fa-laptop"></i><a href="./task1/Portfolio.html">Services</a>
                 </li>
                 <li>
-                    <i class="fa-regular fa-address-card"></i><a href="#Contact">Contact Us</a>
+                    <i class="fa-regular fa-address-card"></i><a href="./task1/Contact Us.html">Contact Us</a>
                 </li>
             </ul>
         </div>
@@ -74,13 +74,13 @@
             <div class="footer-section">
                 <h4>About Us</h4>
                 <p>Software developer in the Computer Science Department.Flexible with goodness 
-                    Communication skills are sought after Get experience</p>
+                    Communication skills are sought after Get experience .</p>
             </div> 
         </div>
             <div class="footer-buttom">
                 <div class="footer-buttom-copyright">
                     <p class="copyright-item"><i class="fa-regular fa-copyright"></i>All right reserved.</p>
-                    <h4 class="copyright-item">Made by Waad ahmed <i class="fa-sharp fa-solid fa-heart"></i></h4>
+                    <h4 class="copyright-item">Made by Waad ahmed  <i class="fa-sharp fa-solid fa-heart"></i></h4>
                 </div>
             </div>
         </div>
